Prevent header logo from overlap

--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -88,6 +88,11 @@
   align-items: center;
 }
 
+.header__logo {
+  position: relative;
+  z-index: 1000;
+}
+
 .header__breadcrumbs,
 .header__logo {
   margin-top: 0;
